[tool.poetry]
name = "tensorflow-probability-issue"
version = "0.1.0"
description = ""
authors = ["Hiroki Arai <hiroara62@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NEWROPE/tensorflow-probability-issue"
repository = "git@github.com:NEWROPE/tensorflow-probability-issue.git"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-probability = "^0.19.0"

[tool.poetry.group.tf_apple_silicon]
optional = true

[tool.poetry.group.tf_apple_silicon.dependencies]
tensorflow-macos = "^2.11.0"
tensorflow-metal = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
